--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  </head> 
  <body> 
   <div class="wrapper"> 
-   <h2 class="question">Hintay May Sasabihin ako sau?</h2>
-   <h2 class="question">Tigil.. Plsss?</h2>
+   <h2 class="question">Crush Mo ko?</h2>
+   <h2 class="question">Aminin...hehehhe</h2>
    <img class="img" alt="img" src="https://raw.githubusercontent.com/DzarelDeveloper/Img/main/AskCrush.png"> 
    <div class="btn-group"> <button class="yes-btn">Oo</button> <button class="no-btn">Hindi</button> 
    </div> 
