--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body> 
   <div class="wrapper"> 
    <h2 class="question">Crush Mo ko?</h2>
-   <h2 class="question">Aminin...Althea</h2>
+   <h2 class="question">Aminin...</h2>
    <img class="img" alt="img" src="https://raw.githubusercontent.com/DzarelDeveloper/Img/main/AskCrush.png"> 
    <div class="btn-group"> <button class="yes-btn">Oo</button> <button class="no-btn">Hindi</button> 
    </div> 
